# Facial-Recognition-and-Detection-Using-Augmented-Reality-Headset-with-Cloud-Server-and-SmartMesh-IP

./: README.md
Arduino_Measuring_System/: README.md
Arduino_Measuring_System/PCB_Project/: CAMtastic3.Cam  CAMtastic5.Cam  CAMtastic6.Cam  PCB_Project.BomDoc  ar_pcb_connection.SchDoc
Arduino_Measuring_System/PCB_Project/Project Outputs for PCB_Project/: Design Rule Check - ar_pcb.drc  PCB_Project.NET  PCB_Project.nsx  PCB_Project.xlsx  Pick Place for ar_pcb.csv  Pick Place for ar_pcb.txt  ar_pcb.2  ar_pcb.G3  ar_pcb.GM13  ar_pcb.GM16  ar_pcb.GML  ar_pcb.GPT  ar_pcb.GTL  ar_pcb.REP
Arduino_Measuring_System/PCB_Project/__Previews/: ar_pcb_connection.SchDocPreview
Arduino_Measuring_System/PCB_Project/pcb_file/: CAMtastic8.Cam
Arduino_Measuring_System/arduino_AR_headset/: arduino_AR_headset.ino
Arduino_Measuring_System/testfiles/compass_test/: compass_test.ino
Arduino_Measuring_System/testfiles/gps_test/: gps_test.ino
Arduino_Measuring_System/testfiles/updated_with_gps/: updated_with_gps.ino
Cloud_Server_Facial_Recognition_Program/: CPEF.cpp  CPFF.cpp  CPLBPH.cpp  CPSVM.cpp  README.md  makefile
Cloud_Server_Facial_Recognition_Program/SocketCode/: TCPClient.c  TCPServer.c  UDPClient.c  UDPServer.c  makefile
PCB/PCB_Arduino_System/: CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic4.Cam  CAMtastic7.Cam  CAMtastic9.Cam  PCB_Project.PrjPcb  PCB_Project.PrjPcbStructure  Schlib1.SchLib  ar_pcb.PcbDoc
PCB/PCB_Arduino_System/Project Outputs for PCB_Project/: Design Rule Check - ar_pcb.html  Status Report.Txt  ar_pcb.DRR  ar_pcb.EXTREP  ar_pcb.G1  ar_pcb.G2  ar_pcb.G4  ar_pcb.GBL  ar_pcb.GBO  ar_pcb.GBP  ar_pcb.GBS  ar_pcb.GD1  ar_pcb.GG1  ar_pcb.GKO  ar_pcb.GM  ar_pcb.GM11  ar_pcb.GM15  ar_pcb.GM5  ar_pcb.GPB  ar_pcb.GTO  ar_pcb.GTP  ar_pcb.GTS  ar_pcb.LDP  ar_pcb.TXT  ar_pcb.apr  ar_pcb_connection.NET
Visual_Studio_ARProgram/: README.md  ar_lidar_new.sln
Visual_Studio_ARProgram/ar_lidar_new/: App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  ar_lidar_new.csproj
WSN_Project_VScode/: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
WSN_Project_VScode/CMSIS/include/: sam.h
WSN_Project_VScode/device/: at91samdXX.cfg  saml21g18b_flash.ld
WSN_Project_VScode/src/: FreeRTOSConfig.h  main.cpp
WSN_Project_VScode/src/Common/: common.cpp
WSN_Project_VScode/src/Common/Inc/: common.h
WSN_Project_VScode/src/Drivers/: DMA.cpp  LTE.cpp  RTCClass.cpp  SERIALCOM.cpp
WSN_Project_VScode/src/Drivers/Inc/: DMA.h  LTE.h  RTCClass.h  SERIALCOM.h
WSN_Project_VScode/src/System/: API.cpp  bluetooth.cpp  lte_parse.cpp  send_task.cpp  sm_parse.cpp  system_setup.cpp
WSN_Project_VScode/src/System/Inc/: API.h  bluetooth.h  lte_parse.h  send_task.h  sm_parse.h  system_setup.h
ar_lidar_new/: App.xaml  MainPage.xaml.cs  Package.appxmanifest
ar_lidar_new/Properties/: AssemblyInfo.cs
